# python-package-template

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CODEOWNERS  LICENSE.md  MANIFEST.in  Makefile  README.md  SECURITY.md  UPSTREAM_CHANGELOG.md  UPSTREAM_README.md  UPSTREAM_SECURITY.md  commitlint.rules.js  develop-requirements.txt  develop.toml  mypy.ini  pylintrc  pyproject.toml  scorecards.yml  setup.py  tox.ini
.github/: dependabot.yaml  dependabot.yml
.github/codeql/: codeql-config.yaml  codeql-config.yml
.github/workflows/: _build.yaml  _generate-rebase.yaml  _release-notifications.yaml  _wiki-documentation.yaml  build.yaml  check-and-release-main.yaml  check-and-release-main.yml  codeql-analysis.yaml  codeql-analysis.yml  dependabot-automerge.yaml  macaron-analysis.yaml  pr-change-set.yaml  pr-comment-audit.yaml  pr-conventional-commits.yaml  pull-request.yaml  pull-request.yml  release-notifications.yaml  release.yaml  scorecards-analysis.yaml  sync-with-upstream.yaml  test-pr.yaml  wiki-documentation.yaml
docs/: Makefile
docs/source/: conf.py  index.rst
package/: __init__.py  __main__.py  something.py
src/package/: __init__.py  __init__.pyi  __main__.py  something.py  something.pyi
tests/: __init__.py  conftest.py  test_something.py
tests/integration/: test_something.py
tests/performance/: test_something.py
tests/unit/: conftest.py  test_something.py
