# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]
requires = ["flit_core >=3.2.0,<4.0.0"]
build-backend = "flit_core.buildapi"

[project]
name = "package"
requires-python = ">=3.10"
authors = [{name = "Author", email = "author@email"}]
maintainers = [{name = "Maintainer", email = "maintainer@email"}]
dynamic = ["version", "description"]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = []
keywords = []
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
something = "package.__main__:main"

[project.entry-points]

[project.optional-dependencies]
# The 'actions' requirements match exactly the packages installed by the workflows.
# We keep them listed here to ensure the infrastructure BOM is consistent with what's
# installed. Make sure to keep the requirements in sync with the workflows!
actions = [
    "commitizen ==3.13.0",
    "twine ==4.0.2",
]
dev = [
    "flit >=3.2.0,<4.0.0",
    "mypy >=0.921,<1.8",
    "pip-audit >=2.4.4,<3.0.0",
    "pylint >=2.9.3,<3.0.3",
    "cyclonedx-bom >=3.11.0,<4.0.0",
]
docs = [
    "sphinx >=5.1.1,<8.0.0",
    "sphinx-markdown-builder >=0.6.4,<1.0.0",
]
hooks = [
    "pre-commit >=3.0.0,<3.6.0",
]
# Note that the `custom_exit_code` and `env` plugins may currently be unmaintained.
test = [
    "hypothesis >=6.21.0,<6.92.3",
    "pytest >=7.2.0,<8.0.0",
    "pytest-custom_exit_code ==0.3.0",
    "pytest-cov ==4.1.0",
    "pytest-env ==1.1.1",
]

[project.urls]
Homepage = "https://github.com/jenstroeger/python-package-template"
Changelog = "https://github.com/jenstroeger/python-package-template/blob/main/CHANGELOG.md"
Documentation = "https://github.com/jenstroeger/python-package-template/wiki"
Issues = "https://github.com/jenstroeger/python-package-template/issues"


# https://bandit.readthedocs.io/en/latest/config.html
# Skip test B101 because of issue https://github.com/PyCQA/bandit/issues/457
[tool.bandit]
tests = []
skips = ["B101"]


# https://github.com/psf/black#configuration
[tool.black]
line-length = 120


# https://github.com/commitizen-tools/commitizen
# https://commitizen-tools.github.io/commitizen/bump/
[tool.commitizen]
bump_message = """bump: release $current_version → $new_version

Automatically generated by Commitizen.
"""
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
version_files = [
    "src/package/__init__.py:__version__",
]
major_version_zero = false
version = "2.11.0"


# https://github.com/pytest-dev/pytest-cov
# https://github.com/nedbat/coveragepy
[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
omit = [
    "src/package/__main__.py",
]


# https://flit.pypa.io/en/latest/pyproject_toml.html#sdist-section
# See also: https://github.com/pypa/flit/issues/565
[tool.flit.sdist]
include = []
exclude = [
    ".github/",
    "docs/",
    "tests/",
    ".flake8",
    ".gitignore",
    ".pre-commit-config.yaml",
    "CHANGELOG.md",
    "Makefile",
    "SECURITY.md",
]


# https://pycqa.github.io/isort/
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip_gitignore = true


# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml
[tool.mypy]
# mypy_path =
# exclude =
show_error_codes = true
show_column_numbers = true
pretty = true
show_traceback = true
check_untyped_defs = true
incremental = false
strict = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_explicit = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# disable_error_code =
# allow_redefinition =

[[tool.mypy.overrides]]
module = [
    "pytest.*",
]
ignore_missing_imports = true


# https://pylint.pycqa.org/en/latest/user_guide/configuration/index.html
[tool.pylint.MASTER]
fail-under = 10.0
disable = [
    "fixme",
    "line-too-long",  # Replaced by Flake8 Bugbear B950 check.
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
]

[tool.pylint.MISCELLANEOUS]
notes = [
    "FIXME",
    "TODO",
    "BUGBUG",
]

[tool.pylint.FORMAT]
max-line-length = 120


# https://docs.pytest.org/en/latest/reference/customize.html#configuration-file-formats
# https://docs.pytest.org/en/latest/reference/reference.html#configuration-options
# https://docs.pytest.org/en/latest/reference/reference.html#command-line-flags
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-vv --doctest-modules --tb native --hypothesis-show-statistics --hypothesis-explain --hypothesis-verbosity verbose -ra --cov package"  # Consider adding --pdb
doctest_optionflags = "IGNORE_EXCEPTION_DETAIL"
testpaths = [
    "tests",
]
env = [
    "PYTHONDEVMODE=1",  # https://docs.python.org/3/library/devmode.html
]
filterwarnings = [
    "always::DeprecationWarning",
    # https://docs.pytest.org/en/latest/how-to/failures.html#warning-about-unraisable-exceptions-and-unhandled-thread-exceptions
    "error::pytest.PytestUnraisableExceptionWarning",
    "error::pytest.PytestUnhandledThreadExceptionWarning",
]
