
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]
requires = ["flit_core >=3.2.0,<4.0.0"]
build-backend = "flit_core.buildapi"

[project]
name = "package"
requires-python = ">=3.10.0,<3.14.0"
authors = [{name = "Author", email = "author@email"}]
maintainers = [{name = "Maintainer", email = "maintainer@email"}]
dynamic = ["version", "description"]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = []
keywords = []
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
something = "package.__main__:main"

[project.entry-points]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/jenstroeger/python-package-template"
Changelog = "https://github.com/jenstroeger/python-package-template/blob/main/CHANGELOG.md"
Documentation = "https://github.com/jenstroeger/python-package-template/wiki"
Issues = "https://github.com/jenstroeger/python-package-template/issues"


# https://flit.pypa.io/en/latest/pyproject_toml.html#sdist-section
# See also: https://github.com/pypa/flit/issues/565
[tool.flit.sdist]
include = []
exclude = [
    ".github/",
    "docs/",
    "tests/",
    ".flake8",
    ".gitignore",
    ".pre-commit-config.yaml",
    "CHANGELOG.md",
    "develop-requirements.txt",
    "develop.toml",
    "Makefile",
    "SECURITY.md",
]
